commit 2 added basic skeletal strcuture html and small amount of css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>GIF DNA GENERATOR</title>
 </head>
 <body>
-    
+<header>
+    <h2>GIF DNA GENERATOR</h2>
+</header> 
+<div class="formBox">Main Area for Form</div>
+<div class="extraBox">Extra section</div>
+<footer>Bottom for bio, links</footer>
 </body>
 </html>
