--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <main>
 <div class="formBox">
     <h3>Main Area for Form</h3>
-    <form id="userinput">
+    <form id="userInput">
     <label for="fname">First Name:</label><br>
     <input type="text" id="fname" name="fname"><br>
     <label for="bday">Birthday (month/day)</label><br>
