beta locked until 1 on 1 with brock for now. cleaned up pseudo code mostly. beginning editing readme.

--- a/index.html
+++ b/index.html
@@ -36,18 +36,14 @@
     <input type="radio" id="nonbinary" name="gender" value="nonbinary">
     <label for="nonbinary">Non-Binary</label><br>
 
-    <button name="submit" id="submit" type="submit" value="formData">GIF ME</button>
+    <button name="submit" id="submit" type="submit" value="formData">GIF MY DNA</button>
 </form>
     </div>
-    <!-- <div class="containerBox1">
-        <h3>Extra section</h3>
-        </div>
-        <div class="containerBox2">
-            <h3>Extra section</h3>
-            </div> -->
+    
 </main>        
 <footer>
-    <h3>Bottom for bio, links</h3>
+    <h3>a project by mh610creative<br>
+    powered by giphy api</h3>
 </footer>
 </body>
 </html>
